[gd_scene load_steps=21 format=3 uid="uid://dsvmobt42asoq"]

[ext_resource type="Script" path="res://Levels/MainMenu.gd" id="1_rrrgt"]
[ext_resource type="Texture2D" uid="uid://bke5efhmb8aam" path="res://Assets/Images/Screenshot 2024-10-09 at 3.22.57 PM.png" id="2_kkdtf"]
[ext_resource type="AudioStream" uid="uid://b3l4sfk6loy6g" path="res://Assets/Audio/Soundtrack/Aerodash Main Menu Theme.wav" id="3_8ccnh"]
[ext_resource type="FontFile" uid="uid://cr85ws1c43cqg" path="res://Assets/Fonts/MissionDanger-gxWB6.otf" id="3_dbb0i"]
[ext_resource type="Texture2D" uid="uid://c1eneaqoqpdxi" path="res://Assets/Images/Screenshot 2024-10-10 at 12.05.50 PM.png" id="3_f7cji"]
[ext_resource type="Texture2D" uid="uid://qbwiu2ifslw0" path="res://Assets/Images/Screenshot 2024-10-09 at 11.31.16 PM.png" id="3_srnp3"]
[ext_resource type="Texture2D" uid="uid://d26fbpygwaqcs" path="res://Assets/Images/back_button.png" id="5_4toby"]
[ext_resource type="FontFile" uid="uid://boywltg32uvvf" path="res://Assets/Fonts/Pildrone-LVAy4.otf" id="5_7qpqa"]
[ext_resource type="Script" path="res://Levels/BackButton.gd" id="6_7emaj"]
[ext_resource type="Texture2D" uid="uid://b6yu1lgjg1ch3" path="res://Assets/Images/settings_icon.png" id="10_hoghh"]
[ext_resource type="Script" path="res://Levels/SettingsButton.gd" id="11_ojjjt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0bll"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0iqw4"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ttkd4"]
bg_color = Color(1, 0.466667, 0.0745098, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ldem"]
bg_color = Color(0.242966, 0.242966, 0.242966, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_prntg"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3chrt"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[sub_resource type="Animation" id="Animation_j5mxs"]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_2uvd8"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_brlaq"]
_data = {
"fade_in": SubResource("Animation_j5mxs"),
"fade_out": SubResource("Animation_2uvd8")
}

[node name="Main" type="Node3D"]
script = ExtResource("1_rrrgt")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8ccnh")
autoplay = true

[node name="MapSetup" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MapSetup"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -7.0
offset_right = 43.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_f7cji")
expand_mode = 1
stretch_mode = 6

[node name="Label" type="Label" parent="MapSetup"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1278.5
offset_right = 1278.5
offset_bottom = 221.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_dbb0i")
theme_override_font_sizes/font_size = 120
text = "MAP SETUP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="MapSetup" node_paths=PackedStringArray("go_to_gui")]
layout_mode = 0
offset_left = 39.0
offset_top = 48.0
offset_right = 166.0
offset_bottom = 169.0
texture_normal = ExtResource("5_4toby")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("6_7emaj")
go_to_gui = NodePath("../../SelectMap")

[node name="Knockdowns" type="CheckButton" parent="MapSetup"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 161.0
offset_top = 296.0
offset_right = 205.0
offset_bottom = 365.0
grow_horizontal = 2
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("5_7qpqa")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_l0bll")
button_pressed = true
alignment = 1

[node name="KnockdownsLabel" type="Label" parent="MapSetup"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -311.0
offset_top = 357.0
offset_right = 126.0
offset_bottom = 431.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_7qpqa")
theme_override_font_sizes/font_size = 60
text = "Knockdowns"

[node name="MemeSounds" type="CheckButton" parent="MapSetup"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 163.0
offset_top = 427.0
offset_right = 207.0
offset_bottom = 496.0
grow_horizontal = 2
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("5_7qpqa")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_0iqw4")
alignment = 1

[node name="MemeSoundsLabel" type="Label" parent="MapSetup"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -363.0
offset_top = 487.0
offset_right = 125.0
offset_bottom = 561.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_7qpqa")
theme_override_font_sizes/font_size = 60
text = "Meme Sounds"

[node name="MapSetupStart" type="Button" parent="MapSetup"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -491.0
offset_top = -253.0
offset_right = 486.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_7qpqa")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_ttkd4")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ldem")
theme_override_styles/pressed = SubResource("StyleBoxFlat_prntg")
text = "START"

[node name="SettingsButton" type="TextureButton" parent="MapSetup"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -201.0
offset_top = 59.0
offset_right = -74.0
offset_bottom = 180.0
grow_horizontal = 0
texture_normal = ExtResource("10_hoghh")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("11_ojjjt")

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -7.0
offset_right = 43.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_f7cji")
expand_mode = 1
stretch_mode = 6

[node name="ControlsLabel" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1278.5
offset_right = 1278.5
offset_bottom = 221.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_dbb0i")
theme_override_font_sizes/font_size = 120
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1288.0
offset_top = 303.0
offset_right = 1269.0
offset_bottom = 524.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_7qpqa")
theme_override_font_sizes/font_size = 70
text = "MOVEMENT: W/A/S/D/Shift/Space

ROLL: Q/E

PAN: Mouse Movement

BOOST: Hold Left Click"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="Settings" node_paths=PackedStringArray("go_to_gui")]
layout_mode = 0
offset_left = 39.0
offset_top = 48.0
offset_right = 166.0
offset_bottom = 169.0
texture_normal = ExtResource("5_4toby")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("6_7emaj")
go_to_gui = NodePath("../../SelectMap")

[node name="SelectMap" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="SelectMap"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -7.0
offset_right = 43.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_f7cji")
expand_mode = 1
stretch_mode = 6

[node name="ScrollContainer" type="ScrollContainer" parent="SelectMap"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1127.0
offset_top = 230.0
offset_right = 1127.0
offset_bottom = 1389.0
grow_horizontal = 2

[node name="GridContainer" type="GridContainer" parent="SelectMap/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
columns = 3

[node name="Label" type="Label" parent="SelectMap"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1278.5
offset_right = 1278.5
offset_bottom = 221.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_dbb0i")
theme_override_font_sizes/font_size = 120
text = "SELECT MAP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="SelectMap" node_paths=PackedStringArray("go_to_gui")]
layout_mode = 0
offset_left = 39.0
offset_top = 48.0
offset_right = 166.0
offset_bottom = 169.0
texture_normal = ExtResource("5_4toby")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("6_7emaj")
go_to_gui = NodePath("../../TitleScreen")

[node name="SettingsButton" type="TextureButton" parent="SelectMap"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -201.0
offset_top = 59.0
offset_right = -74.0
offset_bottom = 180.0
grow_horizontal = 0
texture_normal = ExtResource("10_hoghh")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("11_ojjjt")

[node name="TitleScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="TitleScreen"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -198.0
offset_right = 43.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kkdtf")
expand_mode = 1
stretch_mode = 6

[node name="Control" type="Control" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1279.0
offset_right = 1279.0
offset_bottom = 324.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="TitleScreen/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -607.0
offset_top = 100.0
offset_right = 606.0
offset_bottom = 360.0
grow_horizontal = 2
texture = ExtResource("3_srnp3")
expand_mode = 1
stretch_mode = 4

[node name="TitleScreenPlay" type="Button" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1078.0
offset_top = -277.0
offset_right = -101.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_7qpqa")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_ttkd4")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ldem")
theme_override_styles/pressed = SubResource("StyleBoxFlat_prntg")
text = "PLAY"

[node name="TitleScreenExit" type="Button" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -281.0
offset_right = 1077.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_7qpqa")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_3chrt")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ldem")
theme_override_styles/pressed = SubResource("StyleBoxFlat_prntg")
text = "EXIT GAME"

[node name="SettingsButton" type="TextureButton" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -201.0
offset_top = 59.0
offset_right = -74.0
offset_bottom = 180.0
grow_horizontal = 0
texture_normal = ExtResource("10_hoghh")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("11_ojjjt")

[node name="Fade" type="CanvasLayer" parent="."]
visible = false

[node name="FadeRect" type="ColorRect" parent="Fade"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade"]
libraries = {
"": SubResource("AnimationLibrary_brlaq")
}

[connection signal="back_pressed" from="MapSetup/BackButton" to="." method="_on_back_button_back_pressed"]
[connection signal="mouse_entered" from="MapSetup/BackButton" to="MapSetup/BackButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MapSetup/BackButton" to="MapSetup/BackButton" method="_on_mouse_exited"]
[connection signal="pressed" from="MapSetup/BackButton" to="MapSetup/BackButton" method="_on_pressed"]
[connection signal="toggled" from="MapSetup/Knockdowns" to="." method="_on_knockdowns_toggled"]
[connection signal="toggled" from="MapSetup/MemeSounds" to="." method="_on_meme_sounds_toggled"]
[connection signal="pressed" from="MapSetup/MapSetupStart" to="." method="_on_map_setup_start_pressed"]
[connection signal="mouse_entered" from="MapSetup/SettingsButton" to="MapSetup/SettingsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MapSetup/SettingsButton" to="MapSetup/SettingsButton" method="_on_mouse_exited"]
[connection signal="pressed" from="MapSetup/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="back_pressed" from="Settings/BackButton" to="." method="_on_back_button_back_pressed"]
[connection signal="mouse_entered" from="Settings/BackButton" to="Settings/BackButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Settings/BackButton" to="Settings/BackButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Settings/BackButton" to="Settings/BackButton" method="_on_pressed"]
[connection signal="back_pressed" from="SelectMap/BackButton" to="." method="_on_back_button_back_pressed"]
[connection signal="mouse_entered" from="SelectMap/BackButton" to="SelectMap/BackButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SelectMap/BackButton" to="SelectMap/BackButton" method="_on_mouse_exited"]
[connection signal="pressed" from="SelectMap/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SelectMap/BackButton" to="SelectMap/BackButton" method="_on_pressed"]
[connection signal="mouse_entered" from="SelectMap/SettingsButton" to="SelectMap/SettingsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SelectMap/SettingsButton" to="SelectMap/SettingsButton" method="_on_mouse_exited"]
[connection signal="pressed" from="SelectMap/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="TitleScreen/TitleScreenPlay" to="." method="_on_title_screen_play_pressed"]
[connection signal="pressed" from="TitleScreen/TitleScreenPlay" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TitleScreen/TitleScreenExit" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TitleScreen/TitleScreenExit" to="." method="_on_title_screen_exit_pressed"]
[connection signal="mouse_entered" from="TitleScreen/SettingsButton" to="TitleScreen/SettingsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TitleScreen/SettingsButton" to="TitleScreen/SettingsButton" method="_on_mouse_exited"]
[connection signal="pressed" from="TitleScreen/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="animation_finished" from="Fade/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
